完成修改密码

--- a/OA-SMT/Class/关于工具/ResetPasswordViewController.xib
+++ b/OA-SMT/Class/关于工具/ResetPasswordViewController.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ResetPasswordViewController">
             <connections>
-                <outlet property="oldPasswordTextF" destination="x7o-t4-ra7" id="zwM-dD-9Sm"/>
+                <outlet property="oldPasswordTextF" destination="S9N-lI-uJI" id="5YD-qP-5rT"/>
                 <outlet property="passwordTextF" destination="ebx-48-POI" id="3l4-Qe-aed"/>
                 <outlet property="saveBtn" destination="TMM-jB-YMe" id="UYp-5s-CGz"/>
                 <outlet property="surePasswordTextF" destination="xLF-BQ-gEq" id="dz3-cK-9UR"/>
