--- a/OA-SMT/ReusingUI/BaseCell.xib
+++ b/OA-SMT/ReusingUI/BaseCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,8 +19,11 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C9h-81-eyn">
-                        <rect key="frame" x="15" y="14" width="42" height="15.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的位置" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C9h-81-eyn">
+                        <rect key="frame" x="15" y="14" width="80" height="15.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="80" id="rLj-IT-RCV"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -39,8 +42,8 @@
                             <constraint firstAttribute="height" constant="1" id="DXY-RT-cMG"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MpO-8P-bv0">
-                        <rect key="frame" x="338" y="14" width="0.0" height="15.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MpO-8P-bv0">
+                        <rect key="frame" x="105" y="14" width="233" height="15.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -54,6 +57,7 @@
                     <constraint firstItem="C9h-81-eyn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="CKx-ai-Jw9"/>
                     <constraint firstAttribute="trailing" secondItem="pfs-rg-DjD" secondAttribute="trailing" id="DhL-fz-B2h"/>
                     <constraint firstAttribute="bottom" secondItem="C9h-81-eyn" secondAttribute="bottom" constant="14" id="G0p-go-S1u"/>
+                    <constraint firstItem="MpO-8P-bv0" firstAttribute="leading" secondItem="C9h-81-eyn" secondAttribute="trailing" constant="10" id="GPG-MR-wBz"/>
                     <constraint firstItem="MpO-8P-bv0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="XdB-ms-j8m"/>
                     <constraint firstAttribute="trailing" secondItem="kRa-QY-xVH" secondAttribute="trailing" constant="15" id="cpr-55-zmT"/>
                     <constraint firstItem="kRa-QY-xVH" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="d9c-FE-alV"/>
